--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 
   <script>
     let data = [];
-    const UMBRAL = 14235000; // 10 SMLV en pesos
-    const BASE_URL = "https://decdi-backend-service.onrender.com/api/data/"; // ✅ usa tu backend Render
+    const UMBRAL = 14235000; // 10 SMLV
+    const BASE_URL = "https://decdi-backend-service.onrender.com/api/data/";
+    const API_KEY = "REEMPLAZA_CON_TU_API_KEY_SEGURA"; // ⚠️ solo en tu entorno local o Render env
 
     const fenomenoMap = {
       "A": "Sabotaje",
@@ -90,53 +91,56 @@
 
     function parseNumber(valor) {
       if (!valor) return 0;
-      return parseFloat(
-        valor.toString()
-             .replace(/\./g, "")
-             .replace(/,/g, ".")
-      ) || 0;
+      return parseFloat(valor.toString().replace(/\./g, "").replace(/,/g, ".")) || 0;
     }
 
-    // ✅ Ajuste principal: ahora los CSV se leen desde tu backend Flask seguro
-    function cargarCSV(nombreArchivo) {
+    // ✅ Carga de CSV a través del backend con API_KEY
+    async function cargarCSV(nombreArchivo) {
       const url = BASE_URL + nombreArchivo;
       console.log("🔗 Cargando CSV desde backend:", url);
 
-      d3.text(url)
-        .then(textoCSV => {
-          const csv = d3.csvParse(textoCSV);
-
-          data = csv.map(d => ({
-            fenomeno: d.FENOMENO || "SIN_FENOMENO",
-            fenomenoLetra: d.FENOMENO_LETRA || "NA",
-            umbral: d.SUPERA_UMBRAL_SMLV ? d.SUPERA_UMBRAL_SMLV.toLowerCase() : "false",
-            cuantia: parseNumber(d.CUANTIA_MAXIMA)
-          }));
-
-          const selectFenomeno = document.getElementById("filtroFenomeno");
-          selectFenomeno.innerHTML = '<option value="Todos">Todos</option>';
-
-          const fenomenosUnicos = Array.from(new Set(data.map(d => d.fenomeno)));
-          fenomenosUnicos.forEach(f => {
-            const opt = document.createElement("option");
-            opt.value = f;
-            opt.textContent = f;
-            selectFenomeno.appendChild(opt);
-          });
-
-          actualizarGraficos();
-        })
-        .catch(err => {
-          console.error("❌ Error cargando CSV:", err);
-          alert("No se pudo cargar el archivo: " + nombreArchivo);
+      try {
+        const response = await fetch(url, {
+          headers: { "X-API-KEY": API_KEY }
         });
+
+        if (!response.ok) {
+          throw new Error(`Error ${response.status}: ${response.statusText}`);
+        }
+
+        const textoCSV = await response.text();
+        const csv = d3.csvParse(textoCSV);
+
+        data = csv.map(d => ({
+          fenomeno: d.FENOMENO || "SIN_FENOMENO",
+          fenomenoLetra: d.FENOMENO_LETRA || "NA",
+          umbral: d.SUPERA_UMBRAL_SMLV ? d.SUPERA_UMBRAL_SMLV.toLowerCase() : "false",
+          cuantia: parseNumber(d.CUANTIA_MAXIMA)
+        }));
+
+        const selectFenomeno = document.getElementById("filtroFenomeno");
+        selectFenomeno.innerHTML = '<option value="Todos">Todos</option>';
+
+        const fenomenosUnicos = Array.from(new Set(data.map(d => d.fenomeno)));
+        fenomenosUnicos.forEach(f => {
+          const opt = document.createElement("option");
+          opt.value = f;
+          opt.textContent = f;
+          selectFenomeno.appendChild(opt);
+        });
+
+        actualizarGraficos();
+      } catch (err) {
+        console.error("❌ Error cargando CSV:", err);
+        alert("No se pudo cargar el archivo: " + nombreArchivo);
+      }
     }
 
     function actualizarGraficos() {
       const filtroFenomeno = document.getElementById("filtroFenomeno").value;
       const filtroUmbral = document.getElementById("filtroUmbral").value;
 
-      let filtrados = data.filter(d => 
+      const filtrados = data.filter(d =>
         (filtroFenomeno === "Todos" || d.fenomeno === filtroFenomeno) &&
         (filtroUmbral === "Todos" || d.umbral === filtroUmbral)
       );
@@ -162,14 +166,11 @@
         x: Object.keys(conteoFenomeno),
         y: Object.values(conteoFenomeno),
         type: "bar",
-        marker: {color: "#3498db"},
+        marker: { color: "#3498db" },
         text: Object.values(conteoFenomeno),
         textposition: "outside"
       }], {
-        title: "Casos por Fenómeno",
-        xaxis: {automargin: true},
-        yaxis: {automargin: true, rangemode: "tozero"},
-        margin: {t: 60, b: 60, l: 60, r: 40}
+        title: "Casos por Fenómeno"
       });
 
       Plotly.newPlot("graficoAnillo", [{
@@ -177,7 +178,7 @@
         values: Object.values(conteoUmbral),
         type: "pie",
         hole: 0.5,
-        marker: {colors: ["#2ecc71", "#e74c3c"]}
+        marker: { colors: ["#2ecc71", "#e74c3c"] }
       }], {
         title: "Distribución por SUPERA UMBRAL 10 SMLV"
       });
@@ -185,7 +186,7 @@
       const promedioFenomeno = {};
       filtrados.forEach(d => {
         const nombre = fenomenoMap[d.fenomenoLetra] || d.fenomenoLetra;
-        if (!promedioFenomeno[nombre]) promedioFenomeno[nombre] = {suma: 0, count: 0};
+        if (!promedioFenomeno[nombre]) promedioFenomeno[nombre] = { suma: 0, count: 0 };
         promedioFenomeno[nombre].suma += d.cuantia;
         promedioFenomeno[nombre].count += 1;
       });
@@ -195,27 +196,22 @@
 
       Plotly.newPlot("graficoPromedio", [
         {
-          x: x,
+          x,
           y: yPromedio,
           type: "bar",
-          name: "Promedio de Cuantías",
-          marker: {color: "#9b59b6"},
+          marker: { color: "#9b59b6" },
           text: yPromedio.map(v => `$${v.toLocaleString("es-CO")}`),
           textposition: "outside"
         },
         {
-          x: x,
+          x,
           y: Array(x.length).fill(UMBRAL),
           type: "scatter",
           mode: "lines",
           name: "Umbral 10 SMLV ($14.235.000)",
-          line: {color: "red", dash: "dash"}
+          line: { color: "red", dash: "dash" }
         }
-      ], {
-        title: "Promedio de Cuantías por Fenómeno",
-        yaxis: {title: "Cuantía Promedio ($)", automargin: true, rangemode: "tozero"},
-        margin: {t: 80, b: 80, l: 80, r: 40}
-      });
+      ], { title: "Promedio de Cuantías por Fenómeno" });
     }
 
     document.getElementById("filtroFenomeno").addEventListener("change", actualizarGraficos);
