--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <!--script type="module" src="dist/index.html"></script--> <!-- solo Vite lo necesita -->
   </body>
 </html>
